# crisprSDS

./: CMakeLists.txt  main.cpp  test_setup.txt  testing_genomes.ods
includes/: crispr.h
src/: CMakeLists.txt  crispr.cpp
